Add LocalDB MS SQL Server (T-SQL - tables, functions, procedures). Сonnecting in System.Data.SqlClient. Name DB - LocalDB_WPF_Kred_calc

--- a/WPF_Kred_calc.csproj
+++ b/WPF_Kred_calc.csproj
@@ -13,7 +13,23 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="icon.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="LocalDB_WPF_Kred_calc.mdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="LocalDB_WPF_Kred_calc_log.ldf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="settings.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
